--- a/index.html
+++ b/index.html
@@ -139,17 +139,15 @@
       </div>
    </section>
    <footer class="footer">
-      <div class="futer">
         <ul class="fin">
           <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
         <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
         <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
         <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
-        <p class="contenido-footer">Catalina Rosella</p>
-        <p class="contenido-footer">Nataly Yemal</p>
-        <p class="contenido-footer">Valentina Drechsler</p>
+        <li class="contenido-footer">Catalina Rosella</li>
+        <li class="contenido-footer">Nataly Yemal</li>
+        <li class="contenido-footer">Valentina Drechsler</li>
         </ul>
-      </div>
    </footer>
    
    <script src="home.js"></script>
