--- a/albums.html
+++ b/albums.html
@@ -36,7 +36,7 @@
     </div>
     
 
-    <h2 class="populares">Populares</h2>
+    <h2 class="populares">Canciones populares</h2>
     <div class="container">
         <ul class="popular-song">
             <!-- <li></li>
@@ -47,18 +47,16 @@
         </ul>
     </div>
     <footer class="footer">
-        <div class="futer">
-          <ul class="fin">
-            <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
+        <ul class="fin">
+          <li class="logoDeezer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es"><img class="redes-footer" src="img/twitter.png" alt=""></a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la"><img class="redes-footer" src="img/instagram.png" alt=""></a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981"><img class="redes-footer" src="img/facebook.png" alt=""></a></li>
         <li class="contenido-footer">Catalina Rosella</li>
         <li class="contenido-footer">Nataly Yemal</li>
         <li class="contenido-footer">Valentina Drechsler</li>
-          </ul>
-        </div>
-     </footer>
+        </ul>
+   </footer>
 
     <script src="albums.js"></script>
 </body>
