--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
 
    <section class="todos">   
        <section class="tracks">
-        <h2>TOP ARTISTS</h2>
+        <a href="artistastodos.html"><h2>TOP ARTISTS</h2></a>
         <ul class="artist">
             <!-- <li> <a href="detail.html" class="artista"></a></li> -->
             
         </ul>
        </section>
        <section class="tracks">
-       <h2>TOP ÁLBUMS</h2>
+        <a href="todoalbumes.html"><h2> ÁLBUMS</h2></a>
         <ul class= "informacion">
             <!-- <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li> -->
         </ul>
        </section>
        <section class="tracks">
-        <H2>TOP TRACKS</H2>
+        <a href="todoslostracks.html"><H2>TOP TRACKS</H2></a>
         <ul class="track">
             <!-- <li> <a href="detail.html" class="artista">Blinding Lights</a></li> -->
         </ul>
        </section>
        <section class="tracks">
-          <h2>GENEROS</h2>
+        <a href="generos.html"><h2>GENEROS</h2></a>
             <ul class="generos">
             </ul>
        </section>
@@ -140,10 +140,10 @@
    </section>
    <footer class="footer">
         <ul class="fin">
-          <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
+          <li class="logoDeezer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es"><img class="redes-footer" src="img/twitter.png" alt=""></a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la"><img class="redes-footer" src="img/instagram.png" alt=""></a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981"><img class="redes-footer" src="img/facebook.png" alt=""></a></li>
         <li class="contenido-footer">Catalina Rosella</li>
         <li class="contenido-footer">Nataly Yemal</li>
         <li class="contenido-footer">Valentina Drechsler</li>
