--- a/tracks.html
+++ b/tracks.html
@@ -44,7 +44,7 @@
     
     <!-- <p><a href="" class="agregar">Agregar a playlist</a></p> -->
 <div class="botonsitos">
-    <button class="volver"><a href="todoslostracks.html">Volver a lista de tracks</a></button>
+    <button class="volver"><a href="todoslostracks.html"> Volver a lista de tracks</a></button>
     <button class="agregar">Agregar a playlist</button>
     <button class="verPlaylist"><a href="playlist.html">Ver playlist</a></button>
 </div>
@@ -55,19 +55,17 @@
 <!-- </div> -->
 
 
-    <footer class="footer">
-        <div class="futer">
-          <ul class="fin">
-            <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
-        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
-        <li class="contenido-footer">Catalina Rosella</li>
-        <li class="contenido-footer">Nataly Yemal</li>
-        <li class="contenido-footer">Valentina Drechsler</li>
-          </ul>
-        </div>
-     </footer>
+<footer class="footer">
+    <ul class="fin">
+      <li class="logoDeezer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+    <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es"><img class="redes-footer" src="img/twitter.png" alt=""></a></li>
+    <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la"><img class="redes-footer" src="img/instagram.png" alt=""></a></li>
+    <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981"><img class="redes-footer" src="img/facebook.png" alt=""></a></li>
+    <li class="contenido-footer">Catalina Rosella</li>
+    <li class="contenido-footer">Nataly Yemal</li>
+    <li class="contenido-footer">Valentina Drechsler</li>
+    </ul>
+</footer>
 
  
     
