--- a/resultados.html
+++ b/resultados.html
@@ -33,17 +33,16 @@
     </div>
 </section>
 <footer class="footer">
-    <div class="futer">
-      <ul class="fin">
-        <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
-        <li class="redes-footer">Twitter</li>
-        <li class="redes-footer">Instagram</li>
-        <li class="contenido-footer">Catalina Rosella</li>
-        <li class="contenido-footer">Nataly Yemal</li>
-        <li class="contenido-footer">Valentina Drechsler</li>
-      </ul>
-    </div>
- </footer>
+    <ul class="fin">
+      <li class="logoDeezer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+    <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es"><img class="redes-footer" src="img/twitter.png" alt=""></a></li>
+    <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la"><img class="redes-footer" src="img/instagram.png" alt=""></a></li>
+    <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981"><img class="redes-footer" src="img/facebook.png" alt=""></a></li>
+    <li class="contenido-footer">Catalina Rosella</li>
+    <li class="contenido-footer">Nataly Yemal</li>
+    <li class="contenido-footer">Valentina Drechsler</li>
+    </ul>
+</footer>
     <script src="resultados.js"></script>
 </body>
 </html>
