--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </ul>
        </section>
        <section class="tracks">
-        <a href="todoalbumes.html"><h2> ÁLBUMS</h2></a>
+        <a href="todoalbumes.html"><h2> TOP ALBUMS</h2></a>
         <ul class= "informacion">
             <!-- <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li> -->
         </ul>
@@ -102,7 +102,7 @@
         </ul>
        </section>
        <section class="tracks">
-        <a href="generos.html"><h2>GENEROS</h2></a>
+        <a href="generos.html"><h2>TOP GENRES</h2></a>
             <ul class="generos">
             </ul>
        </section>
