--- a/tracks.html
+++ b/tracks.html
@@ -71,7 +71,7 @@
     <button class="verPlaylist"><a href="playlist.html">Ver playlist</a></button>
 </div>
     <iframe scrolling="no" frameborder="0" allowTransparency="true"
-        src="" width="700" height="92">
+        src="" width="100%" height="92">
     </iframe>
     <!-- hasta aca -->
 <!-- </div> -->
